--- a/src/scss/styles.scss
+++ b/src/scss/styles.scss
@@ -1,4 +1,7 @@
+@import 'normalize-scss';
+@include normalize();
 
+@import 'base';
 
 :root {
   font-family: Inter, Avenir, Helvetica, Arial, sans-serif;
@@ -16,8 +19,7 @@
   -webkit-text-size-adjust: 100%;
 }
 
-
-body{
+body {
   color: wheat;
   background-color: teal;
   border-radius: 24px;
