add font, change root color

--- a/src/partials/header.html
+++ b/src/partials/header.html
@@ -2,8 +2,23 @@
   <nav class="container">
     <ul>
       <li>
-        <a href="./portfolio.html">Portfolio page</a>
+        <a href="./portfolio.html">Валерія Данько</a>
+      </li>
+      <li>
+        <a href="#">Головна</a>
+      </li>
+      <li>
+        <a href="">Освіта</a>
+      </li>
+      <li>
+        <a href="#">Послуги</a>
+      </li>
+      <li>
+        <a href="#">Про мене</a>
       </li>
     </ul>
+    <button type="button">
+      <a href="#">Зв'язатись зі мною</a>
+    </button>
   </nav>
 </header>
