--- a/src/scss/base/_variables.scss
+++ b/src/scss/base/_variables.scss
@@ -5,29 +5,17 @@ $desktop: 1280px;
 :root {
   // Fonts
   --main-font: 'Montserrat', sans-serif;
+  --secondary-font: 'FixelDisplay', sans-serif;
 
-  // Text colors
-  --main-text-cl: #000000;
-  --secondary-text-cl: #ffffff;
+  // Colors
+  --primary-cl: #212121;
+  --accent-cl: #ECD8BD;
+  
+  --pressed-state-cl: #E5B471;
 
-  --info-title-cl: #8c8c8c;
-  --text-footer-cl: #545454;
+  --text-cl: #ffffff;
+  --add-text-cl: #9E9E9E;
 
-  // Background colors
-  --main-bg-cl: #ffffff;
-  --secondary-bg-cl: #f7f7f7;
-  --dark-bg-cl: #2f2f2f;
-  --dark-secondary-bg-cl: #272727;
-  --dark-modal-bg-cl: rgb(47, 46, 46);
-
-  --secondary-accent-cl: #ff6b08;
-
-  // Transition
-  --transition-cubic: cubic-bezier(0.4, 0, 0.2, 1);
-  --transition-time: 500ms;
-
-  // Button colors
-  --accent-btn-color: #ff6b08;
-  --white-btn-color: #fff;
-  --black-btn-color: #000;
+  --icon-cl: #B58224;
+  --arrow-up-cl: #FFD28D;
 }
