--- a/src/scss/index.scss
+++ b/src/scss/index.scss
@@ -8,6 +8,7 @@
 @import './animation/animation';
 
 @import './base/common';
+@import './base/fonts';
 @import './base/variables';
 
 @import './compoments/container';
