header+hero section

--- a/src/partials/header.html
+++ b/src/partials/header.html
@@ -1,23 +1,21 @@
 <header class="header">
-  <nav class="container">
-    <ul>
-      <li>
-        <a href="./portfolio.html">Валерія Данько</a>
-      </li>
-      <li>
+  <nav class="container nav-container">
+    <a class="nav-link" href="./portfolio.html">Валєрія Данько</a>
+    <ul class="nav-list">
+      <li class="nav-list__item">
         <a href="#">Головна</a>
       </li>
-      <li>
+      <li class="nav-list__item">
         <a href="">Освіта</a>
       </li>
-      <li>
+      <li class="nav-list__item">
         <a href="#">Послуги</a>
       </li>
-      <li>
+      <li class="nav-list__item">
         <a href="#">Про мене</a>
       </li>
     </ul>
-    <button type="button">
+    <button type="button" class="nav-button">
       <a href="#">Зв'язатись зі мною</a>
     </button>
   </nav>
