--- a/src/partials/hero.html
+++ b/src/partials/hero.html
@@ -1,15 +1,15 @@
-<section class="hero-section">
-  <ul>
-    <li>
-      <h1>Модель Візажист Професіонал</h1>
-    </li>
-    <li>
-      <p>Розкрийте свою природну красу з допомогою нашого візажу</p>
-    </li>
-  </ul>
-  <ul>
-    <li><h3>Зроби свій вечір - незабутнім</h3></li>
-    <li><p>Завдяки якісному make-up</p></li>
-    <li><a>Написати мені</a></li>
-  </ul>
+<section class="hero">
+  <div class="container">
+    <h1 class="hero-header">Модель Візажист Професіонал</h1>
+    <p class="hero-text">
+      Розкрийте свою природну красу з допомогою нашого візажу
+    </p>
+    <ul class="hero-list">
+      <li class="hero-list__item__white">
+        <h3>Зроби свій вечір - незабутнім</h3>
+      </li>
+      <li class="hero-list__item__gray"><p>Завдяки якісному make-up</p></li>
+      <li class="hero-list__item__beige"><a href="#">Написати мені → </a></li>
+    </ul>
+  </div>
 </section>
