--- a/src/scss/index.scss
+++ b/src/scss/index.scss
@@ -14,5 +14,6 @@
 @import './compoments/container';
 
 @import './compoments/header';
+@import './compoments/hero';
 @import './compoments/content';
 @import './compoments/footer';
