slider create, update sections for mob version

--- a/src/partials/header.html
+++ b/src/partials/header.html
@@ -15,7 +15,7 @@
         <a href="#">Про мене</a>
       </li>
     </ul>
-    <button type="button" class="nav-button">
+    <button type="button" class="accent-button">
       <a href="#">Зв'язатись зі мною</a>
     </button>
   </nav>
