--- a/src/partials/hero.html
+++ b/src/partials/hero.html
@@ -4,6 +4,7 @@
     <p class="hero-text">
       Розкрийте свою природну красу з допомогою нашого візажу
     </p>
+    <img class="hero-collage" src="./img/collage-hero.png" />
     <ul class="hero-list">
       <li class="hero-list__item__white">
         <h3>Зроби свій вечір - незабутнім</h3>
