--- a/src/partials/slider.html
+++ b/src/partials/slider.html
@@ -1,9 +1,24 @@
 <section class="slider">
   <div class="container">
-    <ul>
-      <li>Якісна продукція</li>
-      <li>Кваліфікований спеціаліст</li>
-      <li>Високі стандарти</li>
+    <ul class="slider-list">
+      <li class="slider-list__item">
+        <svg class="slider-svg">
+          <use xlink:href="./img/sprite.svg#icon-diamond"></use>
+        </svg>
+        <p>Якісна продукція</p>
+      </li>
+      <li class="slider-list__item">
+        <svg class="slider-svg">
+          <use xlink:href="./img/sprite.svg#icon-diplom"></use>
+        </svg>
+        <p>Кваліфікований спеціаліст</p>
+      </li>
+      <li class="slider-list__item">
+        <svg class="slider-svg">
+          <use xlink:href="./img/sprite.svg#icon-standarts"></use>
+        </svg>
+        <p class="slider-text">Високі стандарти</p>
+      </li>
     </ul>
   </div>
 </section>
