--- a/src/scss/compoments/_header.scss
+++ b/src/scss/compoments/_header.scss
@@ -1,6 +1,10 @@
 .header {
   background-color: var(--primary-cl);
   padding-bottom: 90px;
+  @include media(mobile-only) {
+    height: 50px;
+    padding-bottom: 0;
+  }
 }
 .nav-container {
     font-family: var(--main-font);
@@ -39,38 +43,9 @@
 }
 .nav-list__item:hover {
     color: var(--pressed-state-cl);
-    text-decoration: underline;
-    text-underline-offset: 10px;
     transition: 0.3s;
 }
 .nav-list__item:focus {
     color: var(--pressed-state-cl);
     transition: 0.3s;
-}
-
-.nav-button {
-    margin: 10px;
-    padding: 15px 30px;
-    text-align: center;
-    transition: 0.3s;
-    background-size: 200% auto;
-    color: var(--primary-cl);
-    border-radius: 30px;
-    display: block;
-    border: 0px;
-    font-weight: 700;
-    box-shadow: 0px 0px 14px -7px #f09819;
-    background-image: linear-gradient(45deg, var(--accent-cl) 0%, var(--pressed-state-cl) 51%, #f7b053 100%);
-    cursor: pointer;
-    user-select: none;
-    -webkit-user-select: none;
-    touch-action: manipulation;
-}
-.nav-button:hover {
-    background-position: right center;
-    color: var(--text-cl);
-    text-decoration: none;
-}
-.nav-button:active {
-    transform: scale(0.95);
 }
