--- a/src/scss/compoments/_hero.scss
+++ b/src/scss/compoments/_hero.scss
@@ -1,28 +1,52 @@
 .hero {
-    background-color: var(--primary-cl);
-    padding-bottom: 90px;
+  background-color: var(--primary-cl);
+  padding-bottom: 90px;
+  @include media(mobile-only) {
+    display: flex;
+    margin: 0 auto;
+  }
 }
 .hero-header {
+  color: var(--accent-cl);
+  margin-bottom: 30px;
+  @include media(mobile-only) {
+    font-size: 45px;
+    font-weight: 500;
+    text-align: center;
+  }
+  @include media(tablet) {
     font-size: 90px;
     max-width: 600px;
-    margin-bottom: 30px;
-    color: var(--accent-cl);
+  }
 }
 .hero-text {
-    margin-bottom: 60px;
-    color: var(--text-cl);
+  margin-bottom: 40px;
+  color: var(--text-cl);
+  @include media(mobile-only) {
+    text-align: center;
+  }
+}
+.hero-collage {
+    display: block;
+    margin-left: auto;
+    margin-right: auto;
+    width: 50%;
+    margin-bottom: 20px;
+  @include media(tablet) {
+    display: none;
+  }
 }
 .hero-list {
-    display: flex;
-    flex-direction: column;
-    gap: 25px;
+  display: flex;
+  flex-direction: column;
+  gap: 25px;
 }
 .hero-list__item__white {
-    color: var(--text-cl);
+  color: var(--text-cl);
 }
 .hero-list__item__gray {
-    color: var(--add-text-cl);
+  color: var(--add-text-cl);
 }
 .hero-list__item__beige {
-    color: var(--accent-cl);
+  color: var(--accent-cl);
 }
