--- a/src/scss/index.scss
+++ b/src/scss/index.scss
@@ -12,8 +12,11 @@
 @import './base/variables';
 
 @import './compoments/container';
+@import './compoments/button';
 
 @import './compoments/header';
 @import './compoments/hero';
+@import './compoments/slider';
+@import './compoments/education';
 @import './compoments/content';
 @import './compoments/footer';
