update header and hero section, decomposition and fix BEM

--- a/src/partials/header.html
+++ b/src/partials/header.html
@@ -1,22 +1,15 @@
 <header class="header">
-  <nav class="container nav-container">
-    <a class="nav-link" href="./portfolio.html">Валєрія Данько</a>
-    <ul class="nav-list">
-      <li class="nav-list__item">
-        <a href="#">Головна</a>
-      </li>
-      <li class="nav-list__item">
-        <a href="">Освіта</a>
-      </li>
-      <li class="nav-list__item">
-        <a href="#">Послуги</a>
-      </li>
-      <li class="nav-list__item">
-        <a href="#">Про мене</a>
-      </li>
-    </ul>
+  <nav class="container header__container">
+
+    <a class="header__link" href="./portfolio.html">
+      Валєрія Данько
+    </a>
+
+     <load ="components/nav-list.html" />
+
     <button type="button" class="accent-button">
       <a href="#">Зв'язатись зі мною</a>
     </button>
+    
   </nav>
 </header>
