--- a/src/partials/hero.html
+++ b/src/partials/hero.html
@@ -1,16 +1,24 @@
 <section class="hero">
   <div class="container">
-    <h1 class="hero-header">Модель Візажист Професіонал</h1>
-    <p class="hero-text">
+    <h1 class="hero__title">Модель Візажист Професіонал</h1>
+    <p class="hero__text">
       Розкрийте свою природну красу з допомогою нашого візажу
     </p>
-    <img class="hero-collage" src="./img/collage-hero.png" />
-    <ul class="hero-list">
-      <li class="hero-list__item__white">
+
+    <img class="hero__collage" src="./img/collage-hero.png" />
+
+    <ul class="hero__list">
+      <li class="hero__item--white">
         <h3>Зроби свій вечір - незабутнім</h3>
       </li>
-      <li class="hero-list__item__gray"><p>Завдяки якісному make-up</p></li>
-      <li class="hero-list__item__beige"><a href="#">Написати мені → </a></li>
+      <li class="hero__item--gray">
+        <p>Завдяки якісному make-up</p>
+      </li>
+      <li class="hero__item--beige">
+        <a href="#">Написати мені → </a>
+      </li>
     </ul>
+
+    
   </div>
 </section>
