--- a/src/scss/index.scss
+++ b/src/scss/index.scss
@@ -15,6 +15,8 @@
 @import './compoments/button';
 
 @import './compoments/header';
+@import './compoments/nav-list';
+
 @import './compoments/hero';
 @import './compoments/slider';
 @import './compoments/education';
