--- a/src/partials/slider.html
+++ b/src/partials/slider.html
@@ -1,24 +1,40 @@
-<section class="slider">
-  <div class="container">
-    <ul class="slider-list">
-      <li class="slider-list__item">
-        <svg class="slider-svg">
+<section class="professionalism">
+  <div class="">
+
+    <ul class="professionalism__list">
+      <li class="professionalism__item">
+        <svg class="professionalism__svg">
           <use xlink:href="./img/sprite.svg#icon-diamond"></use>
         </svg>
         <p>Якісна продукція</p>
       </li>
-      <li class="slider-list__item">
-        <svg class="slider-svg">
+      <li class="professionalism__item">
+        <svg class="professionalism__svg">
           <use xlink:href="./img/sprite.svg#icon-diplom"></use>
         </svg>
         <p>Кваліфікований спеціаліст</p>
       </li>
-      <li class="slider-list__item">
-        <svg class="slider-svg">
+      <li class="professionalism__item">
+        <svg class="professionalism__svg">
           <use xlink:href="./img/sprite.svg#icon-standarts"></use>
         </svg>
-        <p class="slider-text">Високі стандарти</p>
+        <p class="professionalism__text">Високі стандарти</p>
       </li>
     </ul>
+
+
+    <div class="swiper professionalism-slider">
+      <div class="swiper-wrapper">
+        <div class="swiper-slide">Slide 1</div>
+        <div class="swiper-slide">Slide 2</div>
+        <div class="swiper-slide">Slide 3</div>
+      </div>
+
+    
+      <div class="swiper-button-next professionalism-slider__btn professionalism-slider__btn--next"></div>
+      <div class="swiper-button-prev professionalism-slider__btn professionalism-slider__btn--prev"></div>
+    
+
+    </div>
   </div>
 </section>
