--- a/src/scss/compoments/_header.scss
+++ b/src/scss/compoments/_header.scss
@@ -13,6 +13,7 @@
 
 .header__container {
   @include media(mobile-only) {
+    display: none;
     opacity: 0;
     visibility: hidden;
     pointer-events: none;
