--- a/src/scss/compoments/_slider.scss
+++ b/src/scss/compoments/_slider.scss
@@ -1,23 +1,52 @@
-.slider {
-    background-color: var(--accent-cl);
+.professionalism {
+  background-color: var(--accent-cl);
 }
-.slider-list {
-    display: flex;
-    flex-direction: row;
-    gap: 40px;
+
+.professionalism__list {
+  display: flex;
+  flex-direction: row;
+  gap: 40px;
+
+  @include media(mobile-only) {
+    display: none;
+    opacity: 0;
+    visibility: hidden;
+    pointer-events: none;
+  }
 }
-.slider-list__item {
-    display: flex;
-    flex-direction: column;
-    align-items: center;
-    gap: 10px;
-    padding-top: 45px;
-    padding-bottom: 45px;
+
+.professionalism__item {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  gap: 10px;
+  padding-top: 45px;
+  padding-bottom: 45px;
 }
-.slider-svg {
-    width: 40px;
-    height: 40px;
+
+.professionalism__svg {
+  width: 40px;
+  height: 40px;
 }
-.slider-text {
-    text-align: center;
+
+.professionalism__text {
+  text-align: center;
+}
+
+.professionalism-slider {
+  width: 100%;
+  height: 177px;
+}
+
+.professionalism-slider {
+  @include media(mobile-only) {
+    display: block;
+  }
+
+  @include media(tablet) {
+    display: none;
+    opacity: 0;
+    visibility: hidden;
+    pointer-events: none;
+  }
 }
