--- a/src/partials/education.html
+++ b/src/partials/education.html
@@ -1,37 +1,37 @@
 <section class="education">
   <div class="container">
-    <ul class="education-list">
-      <li class="education-list__item">
-        <h3 class="education-list__item__header">- Вища освіта</h3>
-        <p class="education-list__item__text">Детальніше про освіту (ʘ ͟ʖ ʘ)</p>
+    <ul class="education__list">
+      <li class="education__item">
+        <h3 class="education__sub-title">- Вища освіта</h3>
+        <p class="education__description">Детальніше про освіту (ʘ ͟ʖ ʘ)</p>
       </li>
-      <li class="education-list__item">
-        <h3 class="education-list__item__header">- Назва курсу</h3>
-        <p class="education-list__item__text">Детальніше про курс (ʘ ͟ʖ ʘ)</p>
+      <li class="education__item">
+        <h3 class="education__sub-title">- Назва курсу</h3>
+        <p class="education__description">Детальніше про курс (ʘ ͟ʖ ʘ)</p>
       </li>
-      <li class="education-list__item">
-        <h3 class="education-list__item__header">- Назва курсу</h3>
-        <p class="education-list__item__text">Детальніше про курс (ʘ ͟ʖ ʘ)</p>
+      <li class="education__item">
+        <h3 class="education__sub-title">- Назва курсу</h3>
+        <p class="education__description">Детальніше про курс (ʘ ͟ʖ ʘ)</p>
       </li>
-      <li class="education-list__item">
-        <h3 class="education-list__item__header">- Назва курсу</h3>
-        <p class="education-list__item__text">Детальніше про курс (ʘ ͟ʖ ʘ)</p>
+      <li class="education__item">
+        <h3 class="education__sub-title">- Назва курсу</h3>
+        <p class="education__description">Детальніше про курс (ʘ ͟ʖ ʘ)</p>
       </li>
-      <li class="education-list__item">
-        <h3 class="education-list__item__header">- Лекції</h3>
-        <p class="education-list__item__text">Детальніше про лекції (ʘ ͟ʖ ʘ)</p>
+      <li class="education__item">
+        <h3 class="education__sub-title">- Лекції</h3>
+        <p class="education__description">Детальніше про лекції (ʘ ͟ʖ ʘ)</p>
       </li>
-      <li class="education-list__item">
-        <h3 class="education-list__item__header">- Вебінари</h3>
-        <p class="education-list__item__text">
+      <li class="education__item">
+        <h3 class="education__sub-title">- Вебінари</h3>
+        <p class="education__description">
           Детальніше про вебінари (ʘ ͟ʖ ʘ)
         </p>
       </li>
     </ul>
-    <h2 class="education-header">
+    <h2 class="education__title">
       Професійний візажист з багаторічним досвідом
     </h2>
-    <p class="education-text">
+    <p class="education__text">
       Високий рівень якості послуг для клієнтів які прагнуть зробити досконалий
       образ в одному кліку від Вас:
     </p>
