add education section

--- a/src/partials/education.html
+++ b/src/partials/education.html
@@ -1,5 +1,36 @@
 <section class="education">
-  <div class="container">
+  <div class="education__bg-img animation--rotating"></div>
+  <div class="container education__wrapper">
+    <div>
+      <h2 class="education__title">
+        Професійний візажист з багаторічним досвідом
+      </h2>
+
+      <p class="education__text">
+        Високий рівень якості послуг для клієнтів які прагнуть зробити
+        досконалий образ в одному кліку від Вас:
+      </p>
+
+      <button
+        class="button button--secondary education__btn-desktop"
+        type="button"
+      >
+        <svg width="36" height="36">
+          <use href="/img/sprite.svg#icon-clock"></use>
+        </svg>
+
+        <p class="education__btn-text">Записатись</p>
+      </button>
+
+      <img
+        class="education__img"
+        alt="education"
+        src="./img/education-lg@1x.jpg"
+        width="730"
+        height="400"
+      />
+    </div>
+
     <ul class="education__list">
       <li class="education__item">
         <h3 class="education__sub-title">- Вища освіта</h3>
@@ -23,18 +54,19 @@
       </li>
       <li class="education__item">
         <h3 class="education__sub-title">- Вебінари</h3>
-        <p class="education__description">
-          Детальніше про вебінари (ʘ ͟ʖ ʘ)
-        </p>
+        <p class="education__description">Детальніше про вебінари (ʘ ͟ʖ ʘ)</p>
       </li>
     </ul>
-    <h2 class="education__title">
-      Професійний візажист з багаторічним досвідом
-    </h2>
-    <p class="education__text">
-      Високий рівень якості послуг для клієнтів які прагнуть зробити досконалий
-      образ в одному кліку від Вас:
-    </p>
-    <button>Записатись</button>
+
+    <button
+      class="button button--secondary education__btn-mobile"
+      type="button"
+    >
+      <svg width="36" height="36">
+        <use href="/img/sprite.svg#icon-clock"></use>
+      </svg>
+
+      <p class="education__btn-text">Записатись</p>
+    </button>
   </div>
 </section>
