--- a/src/partials/header.html
+++ b/src/partials/header.html
@@ -1,15 +1,11 @@
 <header class="header">
   <nav class="container header__container">
+    <a class="header__link" href="./portfolio.html"> Валєрія Данько </a>
 
-    <a class="header__link" href="./portfolio.html">
-      Валєрія Данько
-    </a>
+    <load ="components/nav-list.html" />
 
-     <load ="components/nav-list.html" />
-
-    <button type="button" class="accent-button">
+    <button type="button" class="button button--primary">
       <a href="#">Зв'язатись зі мною</a>
     </button>
-    
   </nav>
 </header>
