--- a/src/scss/compoments/_education.scss
+++ b/src/scss/compoments/_education.scss
@@ -1,13 +1,113 @@
 .education {
+  position: relative;
   background-color: var(--primary-cl);
+  padding: 50px 0;
+
+  @include media(tablet) {
+    padding: 90px 0;
+  }
+}
+
+.education__bg-img {
+  @include media(tablet) {
+    position: absolute;
+    right: 90px;
+    bottom: 170px;
+    background-image: url('/img/education-bg-img.svg');
+    width: 500px;
+    height: 500px;
+    background-repeat: no-repeat;
+  }
+}
+
+.education__wrapper {
+  @include media(mobile-only) {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+  }
+
+  @include media(tablet) {
+    display: flex;
+    justify-content: space-between;
+    flex-direction: row-reverse;
+  }
+}
+
+.education__title {
+  @include media(mobile-only) {
+    margin-bottom: 20px;
+
+    text-align: center;
+    @include font-size(35px, 38px);
+  }
+
+  @include media(tablet) {
+    max-width: 730px;
+    margin-bottom: 60px;
+
+    @include font-size(70px, 77px);
+  }
+}
+
+.education__text {
+  @include media(mobile-only) {
+    display: none;
+  }
+
+  @include media(tablet) {
+    max-width: 620px;
+    margin-bottom: 60px;
+
+    @include font-size(16px, 24px);
+  }
+}
+
+.education__btn-desktop {
+  margin-left: 0;
+  margin-bottom: 60px;
+
+  @include media(mobile-only) {
+    display: none;
+  }
+}
+
+.education__btn-mobile {
+  @include media(tablet) {
+    display: none;
+  }
+}
+
+.education__btn-text {
+  @include font-size(20px, 22px);
+}
+
+.education__img-block {
+  position: relative;
+  padding: 50px;
+}
+
+.education__img {
+  @include media(mobile-only) {
+    margin-bottom: 20px;
+  }
 }
 
 .education__list {
   display: flex;
   flex-direction: column;
-  gap: 50px;
 
   color: var(--accent-cl);
+
+  @include media(mobile-only) {
+    gap: 20px;
+
+    margin-bottom: 75px;
+  }
+
+  @include media(desktop) {
+    gap: 50px;
+  }
 }
 
 .education__item {
@@ -17,11 +117,23 @@
 }
 
 .education__sub-title {
-  font-size: 35px;
+  @include media(mobile-only) {
+    font-size: 35px;
+  }
+
+  @include media(desktop) {
+    font-size: 40px;
+  }
 }
 
 .education__description {
-  font-size: 15px;
+  @include media(mobile-only) {
+    font-size: 15px;
+  }
+
+  @include media(desktop) {
+    font-size: 25px;
+  }
 }
 
 .education__title {
