--- a/src/scss/compoments/_button.scss
+++ b/src/scss/compoments/_button.scss
@@ -1,28 +1,84 @@
 .accent-button {
-    margin: 10px;
-    padding: 15px 30px;
-    text-align: center;
-    transition: 0.3s;
-    background-size: 200% auto;
-    color: var(--primary-cl);
-    border-radius: 30px;
-    display: block;
-    border: 0px;
-    font-weight: 700;
-    box-shadow: 0px 0px 14px -7px #f09819;
-    background-image: linear-gradient(45deg, var(--accent-cl) 0%, var(--pressed-state-cl) 51%, #f7b053 100%);
-    cursor: pointer;
-    user-select: none;
-    -webkit-user-select: none;
-    touch-action: manipulation;
+  margin: 10px;
+  padding: 15px 30px;
+  text-align: center;
+  transition: 0.3s;
+  background-size: 200% auto;
+  color: var(--primary-cl);
+  border-radius: 30px;
+  display: block;
+  border: 0px;
+  font-weight: 700;
+  box-shadow: 0px 0px 14px -7px #f09819;
+  background-image: linear-gradient(
+    45deg,
+    var(--accent-cl) 0%,
+    var(--pressed-state-cl) 51%,
+    #f7b053 100%
+  );
+  cursor: pointer;
+  user-select: none;
+  -webkit-user-select: none;
+  touch-action: manipulation;
 }
 
 .accent-button:hover {
-    background-position: right center;
-    color: var(--text-cl);
-    text-decoration: none;
+  background-position: right center;
+  color: var(--text-cl);
+  text-decoration: none;
 }
 
 .accent-button:active {
-    transform: scale(0.95);
+  transform: scale(0.95);
+}
+
+.button {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  gap: 18px;
+
+  padding: 15px 30px;
+  border-radius: 50px;
+
+  border: 1px solid var(--accent-cl);
+  outline: none;
+}
+
+.button--primary {
+  background-color: transparent;
+  color: var(--accent-cl);
+
+  border-color: var(--accent-cl);
+
+  transition:
+    color 250ms ease,
+    background-color 250ms ease,
+    border-color 250ms ease;
+
+  &:hover,
+  &:focus {
+    color: var(--primary-cl);
+    background-color: var(--accent-cl);
+    border-color: var(--accent-cl);
+  }
+}
+
+.button--secondary {
+  color: var(--primary-cl);
+  background-color: var(--accent-cl);
+  border-color: var(--accent-cl);
+
+  transition:
+    color 250ms ease,
+    background-color 250ms ease,
+    border-color 250ms ease;
+
+  &:hover,
+  &:focus {
+    background-color: transparent;
+    color: var(--accent-cl);
+
+    border-color: var(--accent-cl);
+  }
 }
